# Password-Manager

./: .gitignore  README.md  plan.txt
passwordManagerBackend/: Cargo.toml
passwordManagerBackend/migrations/: 20250313073109_create_password_table.up.sql
passwordManagerBackend/src/: cli.rs  clipboard.rs  database.rs  encryption.rs  main.rs  queries.rs  salt.rs
passwordManagerBackend/src/models/: credentials.rs
